# src-server/src/api/media/mod.rs
@@ -1,9 +1,13 @@
 use crate::api::payloads::{DataResponse, ErrorResponse};
-use crate::api::server::{AppRouter, RouterState, ServerState};
-use crate::domain::models::{MediaSummary, Session};
+use crate::api::server::{AppRouter, RouterState};
+use crate::domain::models::{EpisodeSummary, Media, MediaSummary};
+use crate::errors::AppError;
 use crate::infrastructure::anilist::client::AnilistClient;
+use crate::infrastructure::anilist::queries::media_details::{
+    MediaDetailsQuery, MediaDetailsQueryParams,
+};
 use crate::infrastructure::anilist::queries::ongoing::{OngoingQuery, OngoingQueryParams};
-use axum::extract::State;
+use axum::extract::{Path, State};
 use axum::routing::get;
 use axum::{Json, Router, http};
 use cynic::{GraphQlResponse, QueryBuilder};
@@ -14,6 +18,7 @@ pub mod payloads;
 pub fn create_media_router(state: RouterState) -> AppRouter {
     Router::new()
         .route("/", get(get_current_media))
+        .route("/{media_id}", get(get_media_details))
         .with_state(state)
 }
 
@@ -83,7 +88,7 @@ pub async fn get_current_media(
                 }
 
                 let media_list_cloned = media_list.clone();
-                
+
                 tokio::spawn(async move {
                     if let Err(err) = state.media_repository.cache_media(&media_list_cloned).await {
                         error!("Error caching media: {}", err);
@@ -93,5 +98,66 @@ pub async fn get_current_media(
                 Ok((http::StatusCode::OK, Json(DataResponse::new(media_list))))
             }
         },
+    }
+}
+
+pub async fn get_media_details(
+    Path(media_id): Path<i64>,
+    State(state): State<RouterState>,
+) -> Result<Json<DataResponse<Media>>, (http::StatusCode, Json<ErrorResponse>)> {
+    let session = match state.session_repository.get_access_token().await? {
+        None => {
+            return Err((
+                http::StatusCode::UNAUTHORIZED,
+                Json(ErrorResponse::new("Not logged in!")),
+            ));
+        }
+        Some(session) => session,
+    };
+
+    let episodes = state
+        .episode_repository
+        .get_episodes_by_media_id(media_id)
+        .await?
+        .into_iter()
+        .map(|ep| ep.use_server_urls())
+        .collect::<Vec<EpisodeSummary>>();
+
+    let request_body = MediaDetailsQuery::build(MediaDetailsQueryParams {
+        id: media_id as i32,
+    });
+    let client = AnilistClient::new(session.access_token.as_str());
+    let response = client.post(&request_body).await.map_err(|err| {
+        error!("Error sending request {}", err);
+        (
+            http::StatusCode::INTERNAL_SERVER_ERROR,
+            Json(ErrorResponse::new("Failed to fetch media")),
+        )
+    })?;
+
+    if !response.status().is_success() {
+        error!(
+            "retrieved request {} returned {:?}",
+            response.status(),
+            response.text().await.ok()
+        );
+        return Err((
+            http::StatusCode::INTERNAL_SERVER_ERROR,
+            Json(ErrorResponse::new("Failed to fetch media")),
+        ));
+    }
+
+    let body: GraphQlResponse<MediaDetailsQuery> = response.json().await.unwrap();
+
+    match body.data {
+        None => {
+            error!("MediaDetailsQuery returned None");
+            Err(AppError::InternalServer("A".to_string()).into())
+        }
+        Some(data) => {
+            let media: Media = data.try_into()?;
+
+            Ok(Json(DataResponse::new(media.set_episodes(episodes))))
+        }
     }
 }
